--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -74,6 +74,10 @@
      <Compile Include="Assets\Scripts\Audio\AD_Manager.cs" />
      <Compile Include="Assets\Scripts\Audio\AUD_Snd.cs" />
      <Compile Include="Assets\Scripts\Audio\AUD_TEST_MIXER.cs" />
+     <Compile Include="Assets\Scripts\DefPlayCreator\DPC_Man.cs" />
+     <Compile Include="Assets\Scripts\DefPlayCreator\DPC_ZoneCreator.cs" />
+     <Compile Include="Assets\Scripts\DefPlayCreator\DPC_ZoneSpot.cs" />
+     <Compile Include="Assets\Scripts\DefPlayCreator\IO_ZoneList.cs" />
      <Compile Include="Assets\Scripts\DT_Types\SO_Bool.cs" />
      <Compile Include="Assets\Scripts\DT_Types\SO_Float.cs" />
      <Compile Include="Assets\Scripts\DT_Types\SO_Int.cs" />
