Man Coverage Assignment
Globally stores which tags should be covered in what order, and the order tags should cover them. eg. CB1 has more importance than EDGE1, and WR1 -> TE3.

--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -165,6 +165,7 @@
      <Compile Include="Assets\Scripts\Practice\PRAC_SetUpPlay.cs" />
      <Compile Include="Assets\Scripts\Practice\PRAC_ShowDefense.cs" />
      <Compile Include="Assets\Scripts\Practice\PRAC_UI.cs" />
+     <Compile Include="Assets\Scripts\Practice\PRS_AssignMan.cs" />
      <Compile Include="Assets\Scripts\PROJ_Football.cs" />
      <Compile Include="Assets\Scripts\QB_UI.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Field.cs" />
@@ -200,6 +201,8 @@
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGBABY.txt" />
      <None Include="Assets\Scripts\DT_Types\SO_Vec3.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testd.txt" />
+     <None Include="Assets\Plays\Priorities\Defenders.txt" />
+     <None Include="Assets\Plays\Priorities\Receivers.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Sail_01.txt" />
      <None Include="Assets\PlaysText\plays.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_02.txt" />
