Text Files over Binary Files
Partial change. In the process of converting binary files to text files for Routes.

--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -196,6 +196,7 @@
      <Compile Include="Assets\Scripts\TEST_Build.cs" />
      <Compile Include="Assets\Scripts\TEST_LoadSet.cs" />
      <Compile Include="Assets\Scripts\UI\GFX_UI_Traj.cs" />
+     <Compile Include="Assets\Scripts\Utilities\IO_ExampleCode.cs" />
      <Compile Include="Assets\Scripts\Utilities\LifeSpan.cs" />
      <Compile Include="Assets\Scripts\Utilities\SingletonBehaviour.cs" />
      <Compile Include="Assets\Scripts\Utilities\UT_Extensions.cs" />
@@ -204,35 +205,59 @@
      <Compile Include="Assets\Scripts\Utilities\UT_VecConversion.cs" />
      <None Include="Assets\Plays\EditorCreatedPlays\Cover3Beater.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\DoubleSmash.txt" />
+     <None Include="Assets\Plays\Routes\MHitchR.txt" />
      <None Include="Assets\Settings\Settings.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\sdf.txt" />
+     <None Include="Assets\Plays\Routes\FlatR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\whatevs.txt" />
+     <None Include="Assets\Plays\Routes\Seam.txt" />
+     <None Include="Assets\Plays\Routes\PostL.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Sail_02.txt" />
+     <None Include="Assets\Plays\Routes\SHitchL.txt" />
+     <None Include="Assets\Plays\Routes\SlantL.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestingAbain.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGBABY.txt" />
+     <None Include="Assets\Plays\Routes\WeirdCross.txt" />
      <None Include="Assets\Scripts\DT_Types\SO_Vec3.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testd.txt" />
+     <None Include="Assets\Plays\Routes\SlantR.txt" />
+     <None Include="Assets\Plays\Routes\SCrossR.txt" />
+     <None Include="Assets\Plays\Routes\OutR.txt" />
      <None Include="Assets\Plays\Priorities\Defenders.txt" />
+     <None Include="Assets\Plays\Routes\SHitchR.txt" />
      <None Include="Assets\Plays\Priorities\Receivers.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Sail_01.txt" />
      <None Include="Assets\PlaysText\plays.txt" />
+     <None Include="Assets\Plays\Routes\FlatL.txt" />
+     <None Include="Assets\Plays\Routes\BSlantL.txt" />
+     <None Include="Assets\Plays\Routes\ZagR.txt" />
+     <None Include="Assets\Plays\Routes\Go.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_02.txt" />
      <None Include="Assets\PlaysText\defPlays.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash.txt" />
      <None Include="Assets\RoutesText\routes.txt" />
+     <None Include="Assets\Plays\Routes\DCrossL.txt" />
      <None Include="Assets\ZonesText\zones.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Rando_01.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TestCov3Beat.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\RandoPlay.txt" />
+     <None Include="Assets\Plays\Routes\BSlantR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\temptla.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testasdlkfj.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\TESTINGWhatevs.txt" />
+     <None Include="Assets\Plays\Routes\PostR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_03.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\adsfdas.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Smash2.txt" />
+     <None Include="Assets\Plays\Routes\SeamR.txt" />
+     <None Include="Assets\Plays\Routes\OutL.txt" />
+     <None Include="Assets\Plays\Routes\SCrossL.txt" />
+     <None Include="Assets\Plays\Routes\MHitchL.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Stick_01.txt" />
+     <None Include="Assets\Plays\Routes\DCrossR.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\HB_Wheel.txt" />
+     <None Include="Assets\Plays\Routes\Flat.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\HulkSmash.txt" />
      <None Include="Assets\Plays\EditorCreatedPlays\Testsdl.txt" />
  <Reference Include="Unity.Timeline.Editor">
