--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -180,6 +180,7 @@
      <Compile Include="Assets\Scripts\RoutePasser\RP_Manager.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\RP_Receiver.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\RP_ThrowSpot.cs" />
+     <Compile Include="Assets\Scripts\RoutePasser\RP_UI.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Field.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Mouse.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_NewRoute.cs" />
