--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -176,6 +176,7 @@
      <Compile Include="Assets\Scripts\Practice\PRS_AssignMan.cs" />
      <Compile Include="Assets\Scripts\PreSport\MAN_ShowMatchup.cs" />
      <Compile Include="Assets\Scripts\PROJ_Football.cs" />
+     <Compile Include="Assets\Scripts\RoutePasser\CAM_Outro.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\RP_CatchLog.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\RP_DrawRoutes.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\RP_Hoop.cs" />
@@ -184,6 +185,7 @@
      <Compile Include="Assets\Scripts\RoutePasser\RP_ReceiverList.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\RP_ThrowSpot.cs" />
      <Compile Include="Assets\Scripts\RoutePasser\RP_UI.cs" />
+     <Compile Include="Assets\Scripts\RoutePasser\UI_PlayLive.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Field.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_Mouse.cs" />
      <Compile Include="Assets\Scripts\RT_Editor\RT_NewRoute.cs" />
