--- a/SW_Football/Assembly-CSharp.csproj
+++ b/SW_Football/Assembly-CSharp.csproj
@@ -211,6 +211,9 @@
      <Compile Include="Assets\Scripts\TEST\TEST_Audio1.cs" />
      <Compile Include="Assets\Scripts\TEST\TEST_Build.cs" />
      <Compile Include="Assets\Scripts\TEST\TEST_LoadSet.cs" />
+     <Compile Include="Assets\Scripts\TrophyRoom\CAM_TrophyRoom.cs" />
+     <Compile Include="Assets\Scripts\TrophyRoom\MAN_TrophyRoom.cs" />
+     <Compile Include="Assets\Scripts\TrophyRoom\UI_TrophyRoom.cs" />
      <Compile Include="Assets\Scripts\UI\GFX_UI_Traj.cs" />
      <Compile Include="Assets\Scripts\UI\QB_UI.cs" />
      <Compile Include="Assets\Scripts\UI\UI_PauseMenu.cs" />
